--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12">
+                    <h2>Days left to presentaion:</h2>
                     <div class="time-count">
                         <ul id="countdown">
                             <li class="angle-one">
