--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Coming Soon</title>
+    <title>Welcome</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
-        <script src="js/html5shiv.js"></script>
-        <script src="js/respond.min.js"></script>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
     <![endif]-->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
@@ -23,99 +25,233 @@
 </head><!--/head-->
 
 <body>
-    <div class="logo-image">
-       <a href="#"><img class="img-responsive" src="images/logo.jpg" alt=""> </a>
-    </div>
-     <section id="coming-soon">
-         <div class="container">
+	<header id="header">
+        <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <div class="text-center coming-content">
-                        <h1>UNDER CONSTRUCTION</h1>
-                        <p>Hi there, We have been spending a lot of time in order to launch our new website.
-                            We will offer free food to the first 50 subscribers in our mailing list, another 100 individuals from social media so follow us on<br /> Facebook or Twitter to stay up to date.</p>
-                        <div class="social-link">
-                            <span><a href="#"><i class="fa fa-facebook"></i></a></span>
-                            <span><a href="#"><i class="fa fa-twitter"></i></a></span>
-                            <span><a href="#"><i class="fa fa-google-plus"></i></a></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12">
-                    <h2>Days left to presentaion:</h2>
-                    <div class="time-count">
-                        <ul id="countdown">
-                            <li class="angle-one">
-                                <span class="days time-font">00</span>
-                                <p>Days</p>
-                            </li>
-                            <li class="angle-two">
-                                <span class="hours time-font">00</span>
-                                <p>Hours</p>
-                            </li>
-                            <li class="angle-one">
-                                <span class="minutes time-font">00</span>
-                                <p class="minute">Mins</p>
-                            </li>
-                            <li class="angle-two">
-                                <span class="seconds time-font">00</span>
-                                <p>Secs</p>
-                            </li>
+                <div class="col-sm-12 overflow">
+                   <div class="social-icons pull-right">
+                        <ul class="nav nav-pills">
+                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href=""><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
+             </div>
+        </div>
+        <div class="navbar navbar-inverse" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a class="navbar-brand" href="index.html">
+                    	<h1><img src="images/logo.jpg" alt="logo"></h1>
+                    </a>
+
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="dropdown"><a href="xaboutus2.html">About</i></a></li>
+                        <li class="dropdown"><a href="xportfoliofour.html">Portfolio</i></a></li>
+                        <li><a href="xshortcodes.html">Shortcodes</a></li>
+                    </ul>
+                </div>
+                <div class="search">
+                    <form role="form">
+                        <i class="fa fa-search"></i>
+                        <div class="field-toggle">
+                            <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+    </header>
+    <!--/#header-->
+
+    <section id="home-slider">
+        <div class="container">
+            <div class="main-slider">
+                <div class="slide-text">
+                    <h1>Find Us! Click the Tracker.</h1>
+                    <p>Hi, if you want to know our current location, just click the button below and it will show a map.</p>
+                    <a href="#" class="btn btn-common">Find!</a>
+                </div>
+                <img src="images/home/slider/slide1/park2.png" class="img-responsive slider-truck" alt="slider image">
+                <img src="images/home/slider/slide1/chef.png" class="slider-chef" alt="slider image">
+
+                <img src="images/home/slider/slide1/cloud1.png" class="slider-cloud1" alt="slider image">
+                <img src="images/home/slider/slide1/cloud2.png" class="slider-cloud2" alt="slider image">
+                <img src="images/home/slider/slide1/cloud3.png" class="slider-cloud3" alt="slider image">
+                <img src="images/home/slider/slide1/sun.png" class="slider-sun" alt="slider image">
+                <img src="images/home/truck.png" class="slider-cycle" alt="">
+            </div>
+        </div>
+        <div class="preloader"><i class="fa fa-sun-o fa-spin"></i></div>
     </section>
-    <section id="subscribe">
+    <!--/#home-slider-->
+
+    <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h2><i class="fa fa-envelope-o"></i> SUBSCRIBE TO OUR NEWSLETTER</h2>
-                            <p>Join our mailing list to win freebies and prized! <br />You have FREE Viber chat if registered to a text promo.</p>
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
+                            <img src="images/home/icon1.png" alt="">
                         </div>
-                        <div class="col-sm-6 newsletter">
-                            <form id="newsletter">
-                                <input class="form-control" type="email" name="email"  value="" placeholder="Enter Your email">
-                                <i class="fa fa-check"></i>
-                            </form>
-                            <p>Don't worry we will not use your email for spam</p>
+                        <h2>Coffee</h2>
+                        <p>Description</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
+                            <img src="images/home/icon2.png" alt="">
                         </div>
+                        <h2>Drinks</h2>
+                        <p>Sluuuuuurrrppp.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
+                            <img src="images/home/icon3.png" alt="">
+                        </div>
+                        <h2>Others</h2>
+                        <p>Hmmmmmmmmm.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="coming-soon-footer" class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="text-center">
-                    <p>&copy; Cafeonwheels 2015. All Rights Reserved.</p>
-                    <p>Jasper Sumad-en<a target="_blank" href="#"><i class="fa fa-heart"></i></a></p>
+
+    <!--/#action-->
+
+     <!--
+    <section id="clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <p><img src="images/home/clients.png" class="img-responsive" alt=""></p>
+                        <h1 class="title">Happy Clients</h1>
+                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud </p>
+                    </div>
+                    <div class="clients-logo wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client1.png" class="img-responsive" alt=""></a>
+                        </div>
+                        <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client2.png" class="img-responsive" alt=""></a>
+                        </div>
+                         <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client3.png" class="img-responsive" alt=""></a>
+                        </div>
+                         <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client4.png" class="img-responsive" alt=""></a>
+                        </div>
+                         <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client5.png" class="img-responsive" alt=""></a>
+                        </div>
+                         <div class="col-xs-3 col-sm-2">
+                            <a href="#"><img src="images/home/client6.png" class="img-responsive" alt=""></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+     </section>
+  /#clients-->
 
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center bottom-separator">
+                    <img src="images/home/under.png" class="img-responsive inline" alt="">
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="testimonial bottom">
+                        <h2>Testimonial</h2>
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img src="images/home/profile1.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote>Wow ang sarap! Grabe!</blockquote>
+                                <h3><a href="#">- Glen</a></h3>
+                            </div>
+                         </div>
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#"><img src="images/home/profile2.png" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <blockquote>Ich kann nicht glauben, dass es , super lecker!</blockquote>
+                                <h3><a href="">- Danny</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="contact-info bottom">
+                        <h2>Contacts</h2>
+                        <address>
+                        E-mail: <a href="mailto:someone@example.com">cafeonwheels@food.com</a> <br>
+                        Phone: +1 (123) 456 7890 <br>
+                        Fax: +1 (123) 456 7891 <br>
+                        </address>
+
+                        <h2>Address</h2>
+                        <address>
+                        Bonifacio St. <br>
+                        Upper Road, <br>
+                        Baguio, Benguet 2600<br>
+                        Philippines <br>
+                        </address>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="contact-form bottom">
+                        <h2>Send a message</h2>
+                        <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
+                            <div class="form-group">
+                                <input type="text" name="name" class="form-control" required="required" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" class="form-control" required="required" placeholder="Email Id">
+                            </div>
+                            <div class="form-group">
+                                <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Your text here"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" name="submit" class="btn btn-submit" value="Submit">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-sm-12">
+                    <div class="copyright-text text-center">
+                        <p>&copy; Cafe on Wheels. All Rights Reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--/#footer-->
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/coundown-timer.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript">
-        //Countdown js
-        $("#countdown").countdown({
-            date: "12 december 2015 12:00:00",
-            format: "on"
-        },
-        function() {
-            // callback function
-        });
-    </script>
-
 </body>
 </html>
