--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li class="dropdown"><a href="xaboutus2.html">About</i></a></li>
-                        <li class="dropdown"><a href="xportfoliofour.html">Portfolio</i></a></li>
+                        <li class="dropdown"><a href="menu.html">Portfolio</i></a></li>
                         <li><a href="xshortcodes.html">Shortcodes</a></li>
                     </ul>
                 </div>
