--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown"><a href="index.html">Home</a></li>
                         <li class="dropdown"><a href="xaboutus2.html">About</i></a></li>
-                        <li class="active"><a href="xportfoliofour.html">Portfolio</i></a></li>
+                        <li class="active"><a href="menu.html">Portfolio</i></a></li>
                         <li><a href="xshortcodes.html">Shortcodes</a></li>
                     </ul>
                 </div>                <div class="search">
@@ -114,7 +114,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/1.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -132,7 +132,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/2.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -150,7 +150,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/3.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -168,7 +168,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/4.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -186,7 +186,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/5.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -204,7 +204,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/6.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -222,7 +222,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/7.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -240,7 +240,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/8.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
@@ -258,7 +258,7 @@
                                         </div>
                                         <div class="portfolio-view">
                                             <ul class="nav nav-pills">
-                                                <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                                <li><a href="menu-details.html"><i class="fa fa-link"></i></a></li>
                                                 <li><a href="images/portfolio/9.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                             </ul>
                                         </div>
