--- a/aboutus2.html
+++ b/aboutus2.html
@@ -59,7 +59,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown"><a href="index.html">Home</a></li>
-                        <li class="active"><a href="xaboutus2.html">About/Book Us</i></a></li>
+                        <li class="active"><a href="aboutus2.html">About/Book Us</i></a></li>
                         <li class="dropdown"><a href="menu.html">Portfolio</i></a></li>
                         <li><a href="xshortcodes.html">Shortcodes</a></li>
                     </ul>
@@ -80,7 +80,7 @@
     <section id="about-company" class="padding-top wow fadeInUp" data-wow-duration="400ms" data-wow-delay="400ms">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center">
+                <div class="col-md-6 col-md-offset-3 text-center">
                     <img src="images/newlogo.png" class="margin-bottom" alt="">
                     <h1 class="margin-bottom">About Our Company</h1>
                     <p>Cafe on Wheels is a full-service Food Truck business dedicated to serving our clients build wealth and protect their hard-earned assets. Our firm is completely independent, so our loyalty belongs exclusively to our clients -- not to a parent company.</p>
