--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li class="dropdown"><a href="aboutus2.html">About/Book Us</i></a></li>
-                        <li class="dropdown"><a href="menu.html">Portfolio</i></a></li>
-                        <li><a href="xshortcodes.html">Shortcodes</a></li>
+                        <li class="dropdown"><a href="menu.html">Menu</i></a></li>
+                       
                     </ul>
                 </div>
                 <div class="search">
