--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 	    <script src="js/html5shiv.js"></script>
 	    <script src="js/respond.min.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="shortcut icon" href="images/ico/favicon.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
@@ -57,8 +57,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown"><a href="index.html">Home</a></li>
                         <li class="dropdown"><a href="aboutus2.html">About/Book Us</i></a></li>
-                        <li class="active"><a href="menu.html">Portfolio</i></a></li>
-                        <li><a href="xshortcodes.html">Shortcodes</a></li>
+                        <li class="active"><a href="menu.html">Menu</i></a></li>
+                        
                     </ul>
                 </div>                <div class="search">
                     <form role="form">
