--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
                     <p>Hi, if you want to know our current location, look at map below. Be sure to check our color coding. :)</p>
                      <i class="fa fa-arrow-down"></i>
 
+                     <!-- RATE -->
+
+
+
                 </div>
                 <img src="images/home/slider/slide1/chef.png" class="slider-chef" alt="slider image">
                     <img src="images/home/orangetruck.png" class="slider-cycle" alt="">
@@ -147,6 +151,7 @@
 
     </section>
     <!--/#home-slider-->
+
 
     <section id="projects">
         <div class="container">
@@ -194,6 +199,12 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+
 
 <!--
     <section id="services">
@@ -322,6 +333,7 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Send a message</h2>
+
                         <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" required="required" placeholder="Name">
@@ -335,11 +347,34 @@
                             <div class="form-group">
                                 <input type="submit" name="submit" class="btn btn-submit" value="Submit">
                             </div>
+
                         </form>
+
                     </div>
+
                 </div>
                 <div class="col-sm-12">
+
+<section id="like" class="rating">
+  <!-- FIFTH HEART -->
+  <input type="radio" id="heart_5" name="like" value="5" />
+  <label for="heart_5" title="Five">&#10084;</label>
+  <!-- FOURTH HEART -->
+  <input type="radio" id="heart_4" name="like" value="4" />
+  <label for="heart_4" title="Four">&#10084;</label>
+  <!-- THIRD HEART -->
+  <input type="radio" id="heart_3" name="like" value="3" />
+  <label for="heart_3" title="Three">&#10084;</label>
+  <!-- SECOND HEART -->
+  <input type="radio" id="heart_2" name="like" value="2" />
+  <label for="heart_2" title="Two">&#10084;</label>
+  <!-- FIRST HEART -->
+  <input type="radio" id="heart_1" name="like" value="1" />
+  <label for="heart_1" title="One">&#10084;</label>
+</section>
+
                     <div class="copyright-text text-center">
+                        <p>Click Hearts to rate us.</p>
                         <p>&copy; Cafe on Wheels. All Rights Reserved.</p>
                     </div>
                 </div>
